--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     <base href="/">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon-16x16.png">
-    <link rel="icon" type="image/png" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" href="assets/images/logo/logo-kra.png">
+    <link rel="icon" type="image/png" href="assets/images/logo/logo-kra.png">
 
     <!-- Fonts -->
     <!-- <link
@@ -35,7 +35,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
 
     <!-- Icon fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -50,10 +51,23 @@
     .theme-default.light .mat-mdc-unelevated-button.mat-primary {
         --mdc-filled-button-container-color: #d50170 !important;
     }
-    
+
     .theme-default .light .mat-mdc-unelevated-button.mat-warn,
     .theme-default.light .mat-mdc-unelevated-button.mat-warn {
         --mdc-filled-button-container-color: #ccc !important;
+    }
+
+    .gradient-button {
+        background: linear-gradient(to right, blue, green, yellow);
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        font-size: 16px;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: transform 0.2s, box-shadow 0.2s;
+        text-transform: uppercase;
+        font-weight: bold;
     }
 </style>
 
@@ -66,7 +80,7 @@
                 src="assets/images/logo/logo.svg"
                 src="assets/images/logo/logo.svg"
                 alt="Fuse logo"> -->
-        <img class="object-cover w-160" src="assets/images/logo/laongsmall.png" alt="Fuse logo">
+        <img class="object-cover w-160" src="assets/images/logo/logo-kra-new.png" alt="Fuse logo">
         <div class="spinner ">
             <div class="bounce1 bg-slate-50"></div>
             <div class="bounce2 bg-slate-50"></div>
