--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,24 @@
         text-transform: uppercase;
         font-weight: bold;
     }
+
+    :is(.dark fuse-vertical-navigation-group-item > .fuse-vertical-navigation-item-wrapper .fuse-vertical-navigation-item .fuse-vertical-navigation-item-title-wrapper .fuse-vertical-navigation-item-title) {
+        color: #ffffff !important;
+    }
+
+    .theme-default .light .mat-mdc-unelevated-button.mat-primary,
+    .theme-default.light .mat-mdc-unelevated-button.mat-primary {
+        background: linear-gradient(to right, blue, green, yellow);
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        font-size: 16px;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: transform 0.2s, box-shadow 0.2s;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
 </style>
 
 <body>
